Autenticação de usuários implementada

--- a/AdonisJS/Atividade-05/resources/views/ProdutosViewer.edge
+++ b/AdonisJS/Atividade-05/resources/views/ProdutosViewer.edge
@@ -39,4 +39,5 @@
   </table>
 
   <a class="btn btn-primary" href="{{ route('ProdutoRegister') }}" role="button">Cadastrar</a>
+  <a class="btn btn-danger" href="{{ route('autenticacaoSair') }}" role="button">Sair</a>
 @end
