--- a/AdonisJS/Atividade-05/resources/views/autenticacao/entrada.edge
+++ b/AdonisJS/Atividade-05/resources/views/autenticacao/entrada.edge
@@ -6,7 +6,7 @@
 @end
 
 @section('corpo')
-    <form method="POST" action="{{ route('autenticacaoEntrar') }}">
+    <form method="POST" action="{{ route('entrarAutenticacao') }}">
         <label for="inputEmail" class="form-label">E-mail</label>
         <div class="input-group mb-3">
             <input class="form-control" placeholder="E-mail do usuário" name="email">
