--- a/AdonisJS/Atividade-05/resources/views/produtos/listagem.edge
+++ b/AdonisJS/Atividade-05/resources/views/produtos/listagem.edge
@@ -31,11 +31,11 @@
         <td>{{ produto.quantidade }}</td>
         <td>
           @can('alterarProdutos')
-          <a href="{{ route('ProdutoChange', { id: produto.id }) }}" class="btn btn-primary">Alterar</a>
+          <a href="{{ route('alteracaoProduto', { id: produto.id }) }}" class="btn btn-primary">Alterar</a>
           @end
 
           @can('gerenciarProdutos')
-          <a href="{{ route('ProdutoRemove', { id: produto.id }) }}" class="btn btn-danger">Remover</a>
+          <a href="{{ route('removerProduto', { id: produto.id }) }}" class="btn btn-danger">Remover</a>
           @end
         </td>
       </tr>
@@ -44,8 +44,8 @@
   </table>
 
   @can('gerenciarProdutos')
-  <a class="btn btn-primary" href="{{ route('ProdutoRegister') }}" role="button">Cadastrar</a>
+  <a class="btn btn-primary" href="{{ route('cadastroProduto') }}" role="button">Cadastrar</a>
   @end
   
-  <a class="btn btn-danger" href="{{ route('autenticacaoSair') }}" role="button">Sair</a>
+  <a class="btn btn-danger" href="{{ route('sairAutenticacao') }}" role="button">Sair</a>
 @end
