--- a/AdonisJS/Atividade-05/resources/views/produtos/alteracao.edge
+++ b/AdonisJS/Atividade-05/resources/views/produtos/alteracao.edge
@@ -6,7 +6,7 @@
 @end
 
 @section('corpo')
-    <form method="POST" action="{{ route('ProdutoAlter', { id: produto.id }) }}">
+    <form method="POST" action="{{ route('alterarProduto', { id: produto.id }) }}">
         <label for="inputNome" class="form-label">Nome</label>
         <div class="input-group mb-3">
             <input type="text" class="form-control" placeholder="Nome do produto" value="{{ produto.nome }}" name="nome">
